[DOC-12] Renamed folders and files to remove spaces in names.

--- a/design/BuildingThemes.html
+++ b/design/BuildingThemes.html
@@ -99,14 +99,14 @@
 
 <h3>Steps</h3> <!-- I want these steps to be more prominent: bigger fonts, colored background boxes, etc. -->
 <ol>
-    <li><a href="Building%20Themes/Create%20Layout%20Template.html">Create layout templates for the webpages.</a></li>
-    <li><a href="Building%20Themes/Create%20Container.html">Create containers for modules.</a></li>
-    <li><b>HTML only:</b> <a href="Building%20Themes/Convert%20HTML%20to%20ASCX.html">Convert the layout templates and containers from HTML to ASCX.</a></li>
-    <li>(Optional) <a href="Building%20Themes/Create%20CSS.html">Create a CSS file for each layout template and container, or create a single master CSS file to be used for all layout templates and containers.</a></li>
-    <li><a href="Building%20Themes/Test%20Theme.html">Test the theme on a webpage.</a></li>
-    <li>(Optional) <a href="Building%20Themes/Create%20DocType%20XML.html">Create a doctype XML file.</a></li>
-    <li><a href="Packaging%20Themes.html">Package your DNN theme.</a></li>
-    <li><a href="Uploading%20Themes.html">Upload your DNN theme to your DNN website.</a></li>
+    <li><a href="BuildingThemes/CreateLayoutTemplate.html">Create layout templates for the webpages.</a></li>
+    <li><a href="BuildingThemes/CreateContainer.html">Create containers for modules.</a></li>
+    <li><b>HTML only:</b> <a href="BuildingThemes/ConvertHTMLToASCX.html">Convert the layout templates and containers from HTML to ASCX.</a></li>
+    <li>(Optional) <a href="BuildingThemes/CreateCSS.html">Create a CSS file for each layout template and container, or create a single master CSS file to be used for all layout templates and containers.</a></li>
+    <li><a href="BuildingThemes/TestTheme.html">Test the theme on a webpage.</a></li>
+    <li>(Optional) <a href="BuildingThemes/CreateDocTypeXML.html">Create a doctype XML file.</a></li>
+    <li><a href="PackagingThemes.html">Package your DNN theme.</a></li>
+    <li><a href="UploadingThemes.html">Upload your DNN theme to your DNN website.</a></li>
 </ol>
 
 <!--
