--- a/dev/BuildingModules/BuildModuleFromTemplate.html
+++ b/dev/BuildingModules/BuildModuleFromTemplate.html
@@ -20,11 +20,18 @@
 </p>
 
 
+
+<ul>
+    <li><b></b></li>
+</ul>
+
+
 <h2> Steps </h2>
 <ol>
 
-<li>Install the module templates.</li>
+<li><b>Install the module template.</b></li>
 
+<li><b>Modify the template.</b></li>
 
 </ol>
 
