[DOC-23] Completed BuildingModules.html. Tweaks to IntroToModules.html. * Modified boilerplate BP-PrereqHost.html to make it applicable for the Dev Center also. * Minor cleanup in BuildModuleFromTemplate.html.

--- a/dev/BuildingModules.html
+++ b/dev/BuildingModules.html
@@ -32,7 +32,6 @@
 <h2>Prerequisites</h2>
 
 <ul>
-    <li><object width="100%" data="..\common\bptext\BP-PrereqHost.html"></object></li>
     <li><a href="Building Modules\Set up Dev Environment.html">A local DNN development environment</a></li>
 </ul>
 
@@ -41,53 +40,47 @@
 
 <ol>
 
-<li>Decide what type of module you need:
+<li><b>Create a new module or modify an existing one.</b>
     <ul>
-        <li>A <b>Web Forms module</b> ....</li>
-        <li>A <b>MVC module</b> ....</li>
-        <li>A <b>SPA module</b> ....</li>
-    </ul>
-</li>
-
-<li>Modify the module to implement the functionality you need:
-    <ul>
-        <li><a href="BuildWebFormsModule">Web Forms module</a></li>
-        <li><a href="BuildMVCModule.html">MVC</a></li>
-        <li><a href="BuildSPAModule.html">SPA</a></li>
+        <li><a href="BuildWebFormsModule">Build a Web Forms module.</a></li>
+        <li><a href="BuildMVCModule.html">Build an MVC module.</a></li>
+        <li><a href="BuildSPAModule.html">Build SPA module.</a></li>
     </ul>
 </li>
 
 <li><b>Test your module.</b>
-    <p><b>Tip:</b> Before you start your own tests, try the DNN <a href="http://evs.dotnetnuke.com/">Extension Verification Service</a> (EVS) to perform the initial compatibility tests.
-        <img src="..\..\common\img\scr-EVS.png" width=75%>
+    <p><b>Tip:</b> As part of your tests, run your module through the DNN <a href="http://evs.dotnetnuke.com/">Extension Verification Service</a> (EVS) to perform the compatibility tests in three areas:<br>
         <ul>
-            <li>In the module packaging, verifies that
+            <li><b>Module packaging</b>. EVS verifies:
                 <ul>
-                    <li>That a valid .dnn manifest file exists. Errors are issued, if required sections are missing; warnings, if optional sections are missing.</li>
+                    <li>That a valid <b>.dnn</b> manifest file exists. Errors are issued, if required sections are missing; warnings, if optional sections are missing.</li>
                     <li>That all files listed in the manifest exist in the package.</li> <!-- Need confirmation that this has been implemented. -->
                     <li>That all files included in the package are listed in the manifest.</li> <!-- Need confirmation that this has been implemented. -->
                 </ul>
             </li>
 
-            <li>In the data layer, verifies:
+            <li><b>Data layer</b>. EVS verifies: <!-- Need confirmation that these have been implemented. -->
                 <ul>
-                    <li>That any SQL scripts in the module are compatible with SQL Azure. If Azure-incompatible SQL scripts are found, EVS generates Azure-compatible versions of those scripts and makes them available in a zip file.</li> <!-- Need confirmation that this has been implemented. -->
+                    <li>That any SQL scripts in the module are compatible with SQL Azure. If Azure-incompatible SQL scripts are found, EVS generates Azure-compatible versions of those scripts and makes them available in a zip file.</li>
+                    <li>That SQL's {databaseOwner} and {objectQualifier} are correctly used.</li>
                     <li>That the uninstall script completely removes all objects added by the installation script.</li>
                 </ul>
             </li>
 
-            <li>In the assemblies, verifies:
+            <li><b>Assemblies</b>. EVS verifies:
                 <ul>
                     <li>That no assembly errors exist.</li>
+                    <li>That every assembly reference points to an assembly that exists either in DNN or in the .NET global assembly cache (GAC). If the assembly is not found, EVS returns an error.</li>
                 </ul>
-                <p>By examining the assembly references, the EVS also determines the minimum .NET version and minimum DNN version required for the module to work correctly.</p> <!-- Then what does the EVS do with this information? Does it just tell the module developer? Does it compare the info with what's in a setting file somewhere? -->
             </li>
         </ul>
+        <!-- img src="..\common\img\scr-EVS.png" -->
     </p>
 </li>
 
-<li><b>Package your module.</b></li>
+<li><b><a href="PackagingModules.html">Package your module.</a></b></li>
 
+<li><b>Install your module.</b></li>
 
 </ol>
 
@@ -95,16 +88,14 @@
 <h2> See Also </h2>
 <ul>
 	<li><a href="IntroToModules.html">Introduction to DNN Modules</a></li>
-	<li></li>
 </ul>
-
 
 
 <h2> Sources </h2>
 <ul>
     <li>DNN Wiki: <a href="http://www.dnnsoftware.com/wiki/module-development">Module Development</a></li>
     <li>DNN Community Blog: <a href="http://www.dnnsoftware.com/community-blog/cid/155064/module-development-for-non-developers-skinners-dnn-beginners--blog-series-intro">Module Development</a> series by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/710933">Clinton Patterson</a></li>
-    <li><a href="http://www.dnnsoftware.com/community-blog/cid/147439/extension-verification-service-evs">Extension Verification Service (EVS)</a> by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/169038">Nathan Rover</a></li>
+    <li>DNN Community Blog: <a href="http://www.dnnsoftware.com/community-blog/cid/147439/extension-verification-service-evs">Extension Verification Service (EVS)</a> by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/169038">Nathan Rover</a></li>
 </ul>
 
 
