--- a/dev/IntroToModules.html
+++ b/dev/IntroToModules.html
@@ -55,7 +55,7 @@ A module includes the following:
 
     <li>(Optional) <b>License.txt</b> is displayed to the user during module installation.</li>
 
-    <li>(Optional) The <b>module.css</b> defines how the module should be displayed. If the theme on the webpage includes a container for the pane that the module is associated with, the container overrides this CSS file. <!--Is this correct? Or the other way around? --></li>
+    <li>(Optional) The <b>module.css</b> defines how the module should be displayed. If the theme on the webpage includes a container for the pane that the module is associated with, the container's CSS overrides the module's CSS. <!--Is this correct? Or the other way around? --></li>
 
     <li>The <b>*.dnn</b> file is the DNN manifest, which is an XML file that specifies where the components of the module must be installed. The filename must match the name of the module. <!-- Is this true? --></li>
 
@@ -72,9 +72,6 @@ A module includes the following:
     <li>Edit a Module</li>
     <li>List the Modules in a Page</li>
 </ul>
-
-
-
 
 
 <h2> Sources </h2>
