--- a/dev/IntroToModules.html
+++ b/dev/IntroToModules.html
@@ -8,6 +8,7 @@
 
 <h1> Introduction to DNN Modules </hi>
 
+
 <h2> Overview </h2>
 <p>A DNN <b>module</b> is custom code that extends the functionality of the DNN platform. A module can:
     <ul>
@@ -32,12 +33,12 @@ A module includes the following:
 
     <li>The <b>packages.config</b> file specifies the recommended .NET Framework version for the module.</li>
 
-    <li><b>Data\DataProvider.cs</b> defines the abstract data provider's methods to access data. The abstract data provider hides the details of the concrete data provider, so that the underlying data could be easily swapped without modifying the module's code.
-    <p><b>Example:</b> A concrete data provider might be a SQL database or an Oracle database. The module programmer uses the methods defined in the abstract data provider class to access the data the same way, whether the database is SQL or Oracle.</p>
-    <!-- Confirm that this is what an abstract data provider really does. -->
-    <p><b>Note:</b> This is just one of several ways to access data in DNN.</li></p>
+    <li><b>Data\DataProvider.cs</b> defines the abstract data provider's methods to access data. The abstract data provider hides the details of the concrete data provider, so that the module can access the data, whether the concrete data provider is a SQL database or an Oracle database.
+    <p>The actual implementations (concrete data providers) are stored in the <b>Provider\DataProviders</b> folder. A module can use multiple concrete data providers.</p>
+    <p><b>Note:</b> This is just one of several ways to access data in DNN.</p>
+    </li>
 
-    <li><b>Providers\DataProviders</b> provides the concrete data providers' scripts and other files to access data. The module can access multiple concrete data providers.
+    <li>The <b>Providers</b> folder contains definitions of a href="http://www.dnnsoftware.com/wiki/providers">providers</a> required by the module.
     <p><b>Example:</b> The subfolder <b>SQLDataProvider</b> contains three files:
         <ul>
             <li><b>00.00.01 SQLDataProvider</b> contains the SQL scripts that create tables and stored procedures required by the module to access the data. Run when the module is installed.</li>
@@ -45,7 +46,7 @@ A module includes the following:
             <li><b>SQLDataProvider.cs</b> defines the concrete data provider class's methods to access data, as well as set the value of <b>SqlConnection.ConnectionString</b>.</li>
         </ul>
     </p>
-    </li> <!-- Confirm the spaces in the folder names -->
+    </li>
 
     <li>(Optional) <b>App_LocalResources\*.resx</b> are string tables that contain localized or translated terms.</li>
 
@@ -78,6 +79,7 @@ A module includes the following:
 <ul>
     <li>DNN Community Blog - <a href="http://www.dnnsoftware.com/community-blog/cid/155065/what-is-a-module">What Is a Module</a>
         and <a href="http://www.dnnsoftware.com/community-blog/cid/155075/module-development-templates">Module Development Templates</a> by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/710933">Clinton Patterson<a></li>
+    <li>DNN Wiki - <a href="http://www.dnnsoftware.com/wiki/providers">Providers</a></li>
 </ul>
 
 <!--
