--- a/main/Glossary.html
+++ b/main/Glossary.html
@@ -22,8 +22,8 @@
 <dt>data access layer (DAL)</dt>
     <dd>The set of scripts and other files that are required by a module to access the database. This layer includes scripts of both the abstract data provider and the concrete data provider.</dd> <!-- Is this correct? -->
 
-<dt>Dynamic Content Creator (DCC)</dt>
-    <dd>...</dd>
+<dt>extension</dt>
+    <dd>A combination of themes, modules, or other components that extend the functionality of DNN Platform.</dd>
 
 <dt>HMAC</dt>
     <dd>...</dd>
@@ -31,88 +31,36 @@
 <dt>host</dt>
     <dd>An IT administrator account used to manage the server and its apps.</dd>
 
-<dt>module</dt>
-    <dd>Code that provides some functionality in a webpage. A module could produce dynamic content, which is displayed in a <b>pane</b> on the page.</dd>
+<dt>manifest</dt>
+    <dd>An XML file (e.g., MyExtension.dnn) that specifies how each file in the extension package must be processed during installation.</dd>
 
-<dt>MVC</dt>
-    <dd>...</dd>
+<dt>module</dt>
+    <dd>Code that provides some functionality in a webpage. Example: A module could produce dynamic content, which is displayed in a <b>pane</b> on the page.</dd>
+
+<dt>model-view-controller (MVC)</dt>
+    <dd>A software architecture that separates how the data is stored (model), how it is presented (view), and how the process is managed (controller).</dd>
 
 <dt>package</dt>
-    <dd>??? A structure that holds all components to be added to a DNN-based website. These components could be any combination of skins, containers, widgets, or other components.</dd>
+    <dd>A structure that holds all components of an extension to be added to a DNN-based website.</dd>
 
 <dt>pane</dt>
     <dd>An area in a layout template. A pane displays user-generated content or a standard skin element.</dd>
 
 <dt>skin</dt>
 <dt>theme</dt>
-    <dd>A set of related components that define the look and feel of a web page or site. These components include:
+    <dd>A set of related components that define the look and feel of a page or site. These components include:
         <ul>
-            <li>one or more layout templates,</li>
-            <li>an optional style sheet for each of the templates, and</li>
-            <li>an optional master CSS.</li>
+            <li>one or more layout templates, and</li>
+            <li>an optional CSS for each of the templates, or an optional master CSS for the entire site.</li>
         </ul>
-        In contrast, a <b>container</b> defines the look and feel of a module in the page.
+        In contrast, a <b>container</b> and any associated CSS define the look and feel of a module in a single pane of a page.
     </dd>
+
+<dt>single-page application (SPA)</dt>
+    <dd>A web application that allows content to fit in a single page for a better user experience.</dd>
 
 <dt>theme object</dt>
-    <dd>A standard element that is common among websites. Examples: menu bar, copyright notice, login/registration links, privacy link, terms of service link, and search box.
-
-    <p>The default DNN installation includes the following skin objects:</p>
-        <table width=100%>
-        <tr>
-            <td valign=top>
-                BANNER<br>
-                BREADCRUMB<br>
-                COPYRIGHT<br>
-                CURRENTDATE<br>
-                DOTNETNUKE<br>
-                HELP<br>
-                HOSTNAME<br>
-                LANGUAGE<br>
-            </td>
-            <td valign=top>
-                LEFTMENU<br>
-                LINKS<br>
-                LOGIN<br>
-                LOGO<br>
-                MENU<br>
-                NAV<br>
-                PRIVACY<br>
-                SEARCH<br>
-            </td>
-            <td valign=top>
-                SOLPARTMENU<br>
-                STYLES<br>
-                TAGS<br>
-                TERMS<br>
-                TEXT<br>
-                TREEVIEW<br>
-                USER<br>
-            </td>
-        </tr>
-        </table>
-
-        <p>The following theme objects are relevant to containers:</p>
-        <table width=100%>
-        <tr>
-            <td valign=top>
-                ACTIONBUTTON<br>
-                ACTIONS<br>
-                DROPDOWNACTIONS<br>
-            </td>
-            <td valign=top>
-                ICON<br>
-                LINKACTIONS<br>
-                PRINTMODULE<br>
-            </td>
-            <td valign=top>
-                SOLPARTACTIONS<br>
-                TITLE<br>
-                VISIBILITY
-            </td>
-        </tr>
-        </table>
-    </dd>
+    <dd>A standard element that is common among websites. Examples: menu bar, copyright notice, login/registration links, privacy link, terms of service link, and search box.</dd>
 
 <dt>super user</dt>
    <dd>(See <b>host</b>.)</dd>
