[DOC-18] DNN Manifest: Tweaks and renamed file.

--- a/main/PackagingExtensions/DNNManifestSchema.html
+++ b/main/PackagingExtensions/DNNManifestSchema.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
+<!-- For best results, style:
+    <xmp> to be with a different background color intended for code, indented.
+    <h3> to be with a different background color to separate them from each other.
+-->
 </head>
 <body>
 
@@ -201,7 +205,7 @@
 
 
         <li><b><a href="http://www.dnnsoftware.com/wiki/manifest-authenticationsystem-component">AuthenticationSystem</a></b>.
-            Authentication providers used by the module, such as <li><b>OpenId</b>, <li><b>LiveId</b>, and <li><b>ActiveDirectory</b>.<br />
+            Authentication providers used by the module, such as <b>OpenId</b>, <b>LiveId</b>, and <b>ActiveDirectory</b>.<br />
             <xmp>
     <component type="AuthenticationSystem">
         <authenticationService>
@@ -312,7 +316,7 @@
 
 
         <li><b><a href="http://www.dnnsoftware.com/wiki/manifest-file-component">File</a></b>.
-            Component files to be installed.
+            Files to be installed.
             <p><b>Note:</b> Only files with allowed file extensions are installed. To view or modify the list of file extensions, go to <b>Host</b> &gt; <b>Host Settings</b> &gt; <b>Other Settings</b> &gt; <b>Allowable File Extensions</b> in your DNN installation.</p><br />
             <xmp>
     <component type="File">
