--- a/main/DNN8Requirements.html
+++ b/main/DNN8Requirements.html
@@ -1,72 +1,57 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
-
-<!-- .. include:: /../common/stub-topic.txt -->
-
-<h1> DNN 8 Requirements </hi>
-
-<h2> DNN 8.0+ </h2>
-
-<b>Supported Operating Systems</b>
-<ul>
-	<li>Windows Vista</li>
-	<li>Windows 7</li>
-	<li>Windows 8</li>
-	<li>Windows 8.1</li>
-	<li>Windows 2008</li>
-	<li>Windows 2008 R2</li>
-	<li>Windows 2012</li>
-	<li>Windows 2012 R2</li>
-</ul>
-
-<b>.NET Framework</b>
-<ul>
-	<li>4.5+</li>
-</ul>
-
-<b>Web Server</b>
-<ul>
-	<li>Microsoft IIS 7.0, 7.5, 8.0, 8.5</li>
-</ul>
-
-<b>Database Server</b>
-<ul>
-	<li>Microsoft SQL Server 2008</li>
-	<li>Microsoft SQL Server 2008 Express</li>
-	<li>Microsoft SQL Server 2008 R2</li>
-	<li>Microsoft SQL Server 2008 Express R2</li>
-	<li>Microsoft SQL Server 2012</li>
-	<li>Microsoft SQL Server 2012 Express</li>
-	<li>Microsoft SQL Server 2014</li>
-	<li>Microsoft SQL Server Azure</li>
-</ul>
-
-<b>Browsers</b>
-<ul>
-	<li>Chrome</li>
-	<li>Firefox</li>
-	<li>IE 9+</li>
-	<li>Microsoft Edge</li>
-	<li>Safari for Mac</li>
-</ul>
-
-
-<h2>Recommended Environment</h2>
-<ul>
-	<li>Windows Server 2012 R2</li>
-	<li>IIS 8.5</li>
-	<li>SQL Server 2012</li>
-	<li>.NET Framework 4.5</li>
-</ul>
-
-
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
+.. raw:: html
+	
+	<h1> DNN 8 Requirements </hi>
+	
+	<h2> DNN 8.0+ </h2>
+	
+	<b>Supported Operating Systems</b>
+	<ul>
+		<li>Windows Vista</li>
+		<li>Windows 7</li>
+		<li>Windows 8</li>
+		<li>Windows 8.1</li>
+		<li>Windows 2008</li>
+		<li>Windows 2008 R2</li>
+		<li>Windows 2012</li>
+		<li>Windows 2012 R2</li>
+	</ul>
+	
+	<b>.NET Framework</b>
+	<ul>
+		<li>4.5+</li>
+	</ul>
+	
+	<b>Web Server</b>
+	<ul>
+		<li>Microsoft IIS 7.0, 7.5, 8.0, 8.5</li>
+	</ul>
+	
+	<b>Database Server</b>
+	<ul>
+		<li>Microsoft SQL Server 2008</li>
+		<li>Microsoft SQL Server 2008 Express</li>
+		<li>Microsoft SQL Server 2008 R2</li>
+		<li>Microsoft SQL Server 2008 Express R2</li>
+		<li>Microsoft SQL Server 2012</li>
+		<li>Microsoft SQL Server 2012 Express</li>
+		<li>Microsoft SQL Server 2014</li>
+		<li>Microsoft SQL Server Azure</li>
+	</ul>
+	
+	<b>Browsers</b>
+	<ul>
+		<li>Chrome</li>
+		<li>Firefox</li>
+		<li>IE 9+</li>
+		<li>Microsoft Edge</li>
+		<li>Safari for Mac</li>
+	</ul>
+	
+	
+	<h2>Recommended Environment</h2>
+	<ul>
+		<li>Windows Server 2012 R2</li>
+		<li>IIS 8.5</li>
+		<li>SQL Server 2012</li>
+		<li>.NET Framework 4.5</li>
+	</ul>
