[DOC-18] DNN Manifest Schema - Added link to Bruce's tips for packaging. Other FYI items. (Retry.)

--- a/main/PackagingExtensions/DNNManifestSchema.html
+++ b/main/PackagingExtensions/DNNManifestSchema.html
@@ -21,7 +21,9 @@
 
 <p>Files mentioned in the manifest but do not exist in your package will cause an error message.</p>
 
-<p><b>Note:</b> The manifest file extension must be <b>.dnn</b>. You can add the DNN version at the end; e.g., <code>MyDNNExtension.dnn8</code>.</p>
+<p>The manifest file extension must be <b>.dnn</b>. You can add the DNN version at the end; e.g., <code>MyDNNExtension.dnn8</code>.</p>
+
+<p>Save the manifest file in the base folder of your package to include it when zipping your package files.</p>
 
 
 <h2> Schema </h2>
